--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "11.0.1",
-    "node-sass": "^6.0.1",
+    "next": "^11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.35.1"
+    "sass": "^1.35.1",
+    "swiper": "^7.0.6"
   },
   "devDependencies": {
     "@types/react": "17.0.13",
