--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^4.1.17",
     "next": "^11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-responsive": "^9.0.0-beta.4",
     "sass": "^1.35.1",
+    "styled-components": "^5.3.1",
     "swiper": "^7.0.6"
   },
   "devDependencies": {
     "@types/react": "17.0.13",
+    "@types/styled-components": "^5.1.15",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
     "typescript": "4.3.5"
