--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,6 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/menuToggle.jsx", "components/NavLinks.jsx", "components/Header.tsx", "components/MobileNavLinks.jsx", "pages/_document.js"],
   "exclude": ["node_modules"]
 }
