--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "framer-motion": "^4.1.17",
     "next": "^11.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-responsive": "^9.0.0-beta.4",
     "sass": "^1.35.1",
     "styled-components": "^5.3.1",
