--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "snipcart-nextjs",
+  "name": "glogocustoms",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,6 +13,8 @@
     "next": "^11.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-modal": "^3.14.3",
     "react-responsive": "^9.0.0-beta.4",
     "sass": "^1.35.1",
     "styled-components": "^5.3.1",
@@ -20,6 +22,7 @@
   },
   "devDependencies": {
     "@types/react": "17.0.13",
+    "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.15",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
