--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/menuToggle.jsx", "components/NavLinks.jsx", "components/Header.tsx", "components/MobileNavLinks.jsx", "pages/_document.js"],
   "exclude": ["node_modules"]
