--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "strictNullChecks": false,
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/menuToggle.jsx", "components/NavLinks.jsx", "components/Header.tsx", "components/MobileNavLinks.jsx", "pages/_document.js"],
   "exclude": ["node_modules"]
