--- a/package.json
+++ b/package.json
@@ -9,24 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "clipboard": "^2.0.8",
-    "framer-motion": "^4.1.17",
-    "next": "^11.1.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
-    "react-modal": "^3.14.3",
-    "react-responsive": "^9.0.0-beta.4",
-    "sass": "^1.35.1",
-    "styled-components": "^5.3.1",
-    "swiper": "^7.0.6"
+    "next": "12.1.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "swiper": "^8.0.6"
   },
   "devDependencies": {
-    "@types/react": "17.0.13",
-    "@types/react-modal": "^3.13.1",
-    "@types/styled-components": "^5.1.15",
-    "eslint": "7.29.0",
-    "eslint-config-next": "11.0.1",
-    "typescript": "4.3.5"
+    "eslint": "8.9.0",
+    "eslint-config-next": "12.1.0"
   }
 }
